# auto-wing

./: .gitignore  CHANGES.md  README.md  pyproject.toml
autowing/appium/: actions.py  fixture.py
autowing/core/: ai_context.py  ai_fixture_base.py  ai_fixture_web.py
autowing/core/cache/: cache_manager.py
autowing/core/llm/: base.py  deepseek_client.py  doubao_client.py  factory.py  openai_client.py  qwen_client.py
autowing/core/llm/client/: deepseek.py  doubao.py  gemini.py  openai.py  qwen.py
autowing/playwright/: __init__.py  fixture.py
autowing/selenium/: fixture.py
autowing/utils/: transition.py
docs/: how_to_work.md
examples/: .env  README.md  test_appium_pytest.py  test_appium_unittest.py  test_intelligent_cache.py  test_playwright_demo.py  test_playwright_element_markers.py  test_playwright_iframes.py  test_playwright_pytest.py  test_playwright_unittest.py  test_selenium_demo.py  test_selenium_element_markers.py  test_selenium_iframes.py  test_selenium_pytest.py  test_selenium_unittest.py
