[tool.poetry]
name = "autowing"
version = "0.1.0"
description = ""
authors = ["defnngj <defnngj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.60.1"
dashscope = "^1.22.1"
pytest-playwright = "^0.6.2"
selenium = "^4.28.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
